--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service?createDatabaseIfNotExist=true
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=root
+#not to use in production env *create-drop*
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=9092
