discovery server added and configured

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 #not to use in production env *create-drop*
 spring.jpa.hibernate.ddl-auto=create-drop
-
-server.port=9092
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=0
+spring.application.name=inventory-service
