--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -55,5 +55,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.0.6</version>
+        </dependency>
     </dependencies>
 </project>
