--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=order-service
-server.port=9091
+server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
@@ -28,3 +28,11 @@ resilience4j.timelimiter.instances.inventory.timeout-duration=3s
 #----------------resilience4j retry properties------------------#
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
+
+
+#----------------Kafka Properties------------------------#
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default.topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.utech.orderservice.event.OrderPlacedEvent
