--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=product-service
+
+logging.level.root=info
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
